--- a/apps/website/src/pages/docs/components/utils/resize-box/usage.mdx
+++ b/apps/website/src/pages/docs/components/utils/resize-box/usage.mdx
@@ -1,7 +1,7 @@
 ---
 id: resize-box
 title: ResizeBox
-package: '@saas-ui/pro'
+package: '@saas-ui-pro/react'
 description: Utility hook and component to create resizable panels.
 ---
 
@@ -16,7 +16,7 @@ ResizeBox is used for creating resizable sidebar panels, it currently only suppo
 - `useResize`: Hook that returns prop getters for low-level integration.
 
 ```js
-import { ResizeBox, ResizeHandle, useResize } from '@saas-ui/pro'
+import { ResizeBox, ResizeHandle, useResize } from '@saas-ui-pro/react'
 ```
 
 ## Usage
@@ -100,4 +100,51 @@ The handle can be positioned either `right` or `left` side of the container.
     – Marc Benioff
   </Text>
 </ResizeBox>
+```
+
+### Custom
+
+```jsx
+import { Box } from '@chakra-ui/react'
+import { ResizeHandle, useResize } from '@saas-ui-pro/react'
+
+export default function Custom() {
+  const { getContainerProps, getHandleProps } = useResize({
+    onHandleClick: (e: any) => {
+      alert('Resize handle clicked')
+    },
+  })
+
+  return (
+    <Box
+      {...getContainerProps()}
+      position="relative"
+      bg="blackAlpha.200"
+      borderRightWidth="1px"
+      width="200px"
+      height="200px"
+    >
+      <ResizeHandle
+        {...getHandleProps()}
+        _after={{
+          content: '""',
+          position: 'absolute',
+          top: '0',
+          bottom: '0',
+          left: '4px',
+          width: '2px',
+          bg: 'primary.500',
+          transitionProperty: 'opacity',
+          transitionDuration: 'normal',
+          opacity: 0,
+        }}
+        _hover={{
+          _after: {
+            opacity: 1,
+          },
+        }}
+      />
+    </Box>
+  )
+}
 ```
