chore: update pro references

--- a/apps/website/src/pages/docs/components/advanced-data/data-grid/usage.mdx
+++ b/apps/website/src/pages/docs/components/advanced-data/data-grid/usage.mdx
@@ -434,12 +434,12 @@ export default function InternalState() {
 <Info>
   To add typesafety for the meta properties, you need to add
   `react-table-config.d.ts` to your `src`. To use the default DataGrid config
-  you can simply re-export the config from `@saas-ui/pro`.
+  you can simply re-export the config from `@saas-ui-pro/react`.
 </Info>
 
 ```ts
 // Copy to: src/types/react-table-config.d.ts
-export * from '@saas-ui/pro/src/data-grid/react-table-config.d'
+export * from '@saas-ui-pro/react/src/data-grid/react-table-config.d'
 ```
 
 ```tsx
