--- a/apps/website/src/pages/docs/components/data-display/command/usage.mdx
+++ b/apps/website/src/pages/docs/components/data-display/command/usage.mdx
@@ -15,7 +15,7 @@ The `Command` component wraps individual keys in a `<Kbd />` component.
 ## Import
 
 ```js
-import { Command } from '@saas-ui/pro'
+import { Command } from '@saas-ui/react'
 ```
 
 ```jsx
