--- a/apps/website/src/pages/docs/components/engagement/beacon/usage.mdx
+++ b/apps/website/src/pages/docs/components/engagement/beacon/usage.mdx
@@ -1,7 +1,7 @@
 ---
 id: beacon
 title: Beacon
-package: '@saas-ui/pro'
+package: '@saas-ui-pro/react'
 description: A pulsating beacon that attracts attention
 ---
 
