--- a/apps/website/src/pages/docs/components/engagement/benefits-modal/usage.mdx
+++ b/apps/website/src/pages/docs/components/engagement/benefits-modal/usage.mdx
@@ -1,7 +1,7 @@
 ---
 id: benefits-modal
 title: Benefits Modal
-package: '@saas-ui/pro'
+package: '@saas-ui-pro/react'
 description: A benefits modal is used to show case important features or product updates.
 ---
 
