--- a/apps/website/src/pages/docs/components/engagement/tour-dialog/usage.mdx
+++ b/apps/website/src/pages/docs/components/engagement/tour-dialog/usage.mdx
@@ -1,7 +1,7 @@
 ---
 id: tour-dialog
 title: Tour Dialog
-package: '@saas-ui/pro'
+package: '@saas-ui-pro/react'
 description: A tour dialog is used convey benefits or instructions for a new features.
 ---
 
@@ -34,7 +34,7 @@ import {
   TourDialogActions,
   TourDialogSecondaryAction,
   TourDialogPrimaryAction,
-} from '@saas-ui/pro'
+} from '@saas-ui-pro/react'
 ```
 
 ## Usage
