--- a/apps/website/src/pages/docs/components/layout/toolbar/usage.mdx
+++ b/apps/website/src/pages/docs/components/layout/toolbar/usage.mdx
@@ -22,7 +22,7 @@ import {
   ToolbarGroup,
   ToolbarToggleGroup,
   ToolbarToggleButton,
-} from '@saas-ui/pro'
+} from '@saas-ui-pro/react'
 ```
 
 ## Usage
