--- a/apps/website/src/pages/docs/pro/installation/npm.mdx
+++ b/apps/website/src/pages/docs/pro/installation/npm.mdx
@@ -3,7 +3,7 @@ title: Private NPM
 description: Install Saas UI Pro components from a private NPM registry.
 ---
 
-In the next steps we'll show you how to install `@saas-ui/pro` in new or existing projects.
+In the next steps we'll show you how to install `@saas-ui-pro/react` in new or existing projects.
 You'll need a valid license to install Pro, you can order one [here](/pricing).
 
 <Info>
@@ -33,7 +33,7 @@ In your project root folder you can run this and enter your Github username as u
 npm login --registry=https://npm.saas-ui.dev/ --scope=@saas-ui
 ```
 
-Now run `npm i @saas-ui/pro` to install the Pro components.
+Now run `npm i @saas-ui-pro/react` to install the Pro components.
 
 #### Manual & CI configuration.
 
@@ -70,4 +70,4 @@ Then edit `.npmrc` in the root of your project and add the following lines.
 //npm.saas-ui.dev/:always-auth=true
 ```
 
-Now run `npm i @saas-ui/pro` to check if the configuration was succesful.
+Now run `npm i @saas-ui-pro/react` to check if the configuration was succesful.
