--- a/apps/website/src/pages/docs/pro/installation/pnpm.mdx
+++ b/apps/website/src/pages/docs/pro/installation/pnpm.mdx
@@ -17,7 +17,7 @@ In your project root folder you can run this and enter your Github username as u
 pnpm login --registry=https://npm.saas-ui.dev/ --scope=@saas-ui
 ```
 
-Now run `npm i @saas-ui/pro` to install the Pro components.
+Now run `npm i @saas-ui-pro/react` to install the Pro components.
 
 #### Manual & CI configuration.
 
@@ -54,4 +54,4 @@ Then edit `.npmrc` in the root of your project and add the following lines.
 //npm.saas-ui.dev/:always-auth=true
 ```
 
-Now run `pnpm i @saas-ui/pro` to check if the configuration was succesful.
+Now run `pnpm i @saas-ui-pro/react` to check if the configuration was succesful.
