--- a/apps/website/src/pages/docs/pro/installation/yarn.mdx
+++ b/apps/website/src/pages/docs/pro/installation/yarn.mdx
@@ -33,7 +33,7 @@ export SAAS_UI_TOKEN="GithubUsername:licenseKey"
 
 The same configuration can be used for CI and deployments.
 
-Run `yarn add @saas-ui/pro` to see if the configuration was succesful.
+Run `yarn add @saas-ui-pro/react` to see if the configuration was succesful.
 
 If you have issues getting this to work, try base64 encoding your auth token.
 
