chore: update pro install docs

--- a/apps/website/src/pages/docs/pro/installation/pnpm.mdx
+++ b/apps/website/src/pages/docs/pro/installation/pnpm.mdx
@@ -14,7 +14,7 @@ description: Install Saas UI Pro components from a private NPM registry.
 In your project root folder you can run this and enter your Github username as user and license key as password.
 
 ```bash
-pnpm login --registry=https://npm.saas-ui.dev/ --scope=@saas-ui
+pnpm login --registry=https://npm.saas-ui.dev/ --scope=@saas-ui-pro
 ```
 
 Now run `npm i @saas-ui-pro/react` to install the Pro components.
@@ -49,7 +49,7 @@ or run `source ~/.bash_profile`, to make sure the token is loaded.
 Then edit `.npmrc` in the root of your project and add the following lines.
 
 ```
-@saas-ui:registry=https://npm.saas-ui.dev
+@saas-ui-pro:registry=https://npm.saas-ui.dev
 //npm.saas-ui.dev/:_auth="${SAAS_UI_TOKEN}"
 //npm.saas-ui.dev/:always-auth=true
 ```
