--- a/apps/website/src/pages/docs/pro/installation/yarn.mdx
+++ b/apps/website/src/pages/docs/pro/installation/yarn.mdx
@@ -17,7 +17,7 @@ In the root of your project edit `.yarnrc.yml` and add the following lines.
 
 ```yml
 npmScopes:
-  saas-ui:
+  saas-ui-pro:
     npmRegistryServer: 'https://npm.saas-ui.dev'
 npmRegistries:
   //npm.saas-ui.dev:
