chore: add version to component docs

--- a/apps/website/src/pages/docs/components/forms/select/usage.mdx
+++ b/apps/website/src/pages/docs/components/forms/select/usage.mdx
@@ -22,7 +22,7 @@ import { Select, SelectButton, SelectList, SelectOption } from '@saas-ui/react'
 ```jsx
 <Select
   name="country"
-  placeholder="Select a country"
+  defaultValue="nl"
   options={[
     { label: 'Netherlands', value: 'nl' },
     { label: 'USA', value: 'us' },
