chore: update docs

--- a/apps/website/src/pages/docs/pro/installation/npm.mdx
+++ b/apps/website/src/pages/docs/pro/installation/npm.mdx
@@ -1,5 +1,5 @@
 ---
-title: Private NPM
+title: Private NPM registry
 description: Install Saas UI Pro components from a private NPM registry.
 ---
 
@@ -17,7 +17,9 @@ You'll need a valid license to install Pro, you can order one [here](/pricing).
 All pro packages can be installed from our private NPM registry at https://npm.saas-ui.dev.
 After [redeeming](/redeem) your license, an account will be automatically created.
 
-Your NPM account is a combination of the Github username you used to redeem your license and the license code (`username:licenseKey`).
+Your NPM account is a combination of the Github username (in lower case) you used to redeem your license and the license code (`username:license-key`).
+
+<NpmAuthToken />
 
 <Info>
   Configuration is slightly different for each package manager, so it's
