chore: fix typo in v1 upgrade docs

--- a/apps/website/src/pages/docs/pro/upgrading-to-v1.mdx
+++ b/apps/website/src/pages/docs/pro/upgrading-to-v1.mdx
@@ -38,7 +38,7 @@ The `Page` component composition has been updated, it no longer renders PageHead
 
 #### Section
 
-The `Page` component composition has been updated, it no longer renders PageHeader and PageBody, they should now be added as child components.
+The `Section` component composition has been updated, it no longer renders SectionHeader and SectionBody, they should now be added as child components.
 
 ```tsx
 <Section>
